---
config:
  layout: elk
  theme: redux
---
erDiagram
    direction TB
    Concert {
        int id PK  
        string name  
        string description  
        string start_date_time  
        string end_date_time  
        string event_status  
        string created_at  
        string updated_at  
        concertTicket ticketInfo  
        FeedbackArray feedbacks  
        PromotionArray promotions  
        CrewArray crews  
        AttendeeArray attendees  
        PerformerArray performer  
        PaymentArray payments  
    }
    concertTicket {
        int concert_id FK  
        double base_price  
        int quantity_available  
        int quantity_sold  
        string start_sale_date_time  
        string end_sale_date_time  
    }
    Crew {
        int id PK  
        string name  
        string email  
        string phone_number  
        TaskArray tasks  
        string check_in_time  
        string check_out_time  
    }
    Payment {
        int payment_id PK  
        double amount  
        string currency  
        string payment_method  
        string transaction_id  
        string status  
        string payment_date_time  
    }
    CommunicationLog {
        int comm_id PK  
        int concert_id FK  
        string message_content  
        string sent_at  
    }
    ConcertReport {
        int id PK  
        string date  
        int total_registrations  
        int tickets_sold  
        double sales_volume  
        double attendee_engagement_score  
        double nps_score  
        string created_at  
        string updated_at  
    }
    Feedback {
        int rating  
        string comments  
        string submitted_at  
    }
    Task {
        int task_id PK  
        string task_name  
        string description  
        string status  
        string priority  
    }
    Seat {
        int seat_id PK  
        string seat_type  
        string col_number  
        string row_number  
        string status  
    }
    Performer {
        int performer_id PK  
        string name  
        string type  
        string contact_info  
        string bio  
        string image_url  
    }
    Ticket {
        int ticket_id PK  
        string status  
        string qr_code  
        string created_at  
        string updated_at  
    }
    Venue {
        int id PK  
        string name  
        string address  
        string city  
        string state  
        string zip_code  
        string country  
        int capacity  
        string description  
        string contact_info  
        string seatmap  
    }
    Promotion {
        string code  
        string description  
        string discount_type  
        double percentage  
        string start_date_time  
        string end_date_time  
        bool is_active  
        int usage_limit  
        int used_count  
    }
    Attendee {
        int id PK  
        string name  
        string email  
        string phone_number  
        string attendee_type  
        string registration_date  
        string check_in_time  
        string check_out_time  
    }
    Concert||--o{concertTicket:"has"
    Concert||--o{Feedback:"receives"
    Concert||--o{Promotion:"offers"
    Concert||--o{Crew:"has"
    Concert||--o{Attendee:"has"
    Concert||--o{Performer:"features"
    Concert||--||Venue:"held_at"
    Concert||--o{CommunicationLog:"generates"
    Concert||--o{ConcertReport:"has"
    Concert||--o{Payment:"records"
    Crew||--o{Task:"assigned"
    Attendee||--o{Ticket:"holds"
    Attendee||--o{Feedback:"provides"
    Attendee||--o{Payment:"contains"
    Venue||--o{Seat:"contains"
    concertTicket||--o{Ticket:"generates"
    Ticket||--||Payment:"has"
